--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ hr {
   margin-left: 20px;
 }
 .footer-link{
-    color: #89375F;
+    color: #fffff;
     text-decoration: none;
     font-family: 'Fira Sans', sans-serif;
 }
